@@ -138,6 +138,7 @@ S3method(makeRLearner,classif.quaDA)
 S3method(makeRLearner,classif.rFerns)
 S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.randomForestSRC)
+S3method(makeRLearner,classif.randomUniformForest)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rknn)
 S3method(makeRLearner,classif.rpart)
@@ -195,6 +196,7 @@ S3method(makeRLearner,regr.penalized.ridge)
 S3method(makeRLearner,regr.plsr)
 S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.randomForestSRC)
+S3method(makeRLearner,regr.randomUniformForest)
 S3method(makeRLearner,regr.rknn)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
@@ -292,6 +294,7 @@ S3method(predictLearner,classif.quaDA)
 S3method(predictLearner,classif.rFerns)
 S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.randomForestSRC)
+S3method(predictLearner,classif.randomUniformForest)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rknn)
 S3method(predictLearner,classif.rpart)
@@ -348,6 +351,7 @@ S3method(predictLearner,regr.penalized.ridge)
 S3method(predictLearner,regr.plsr)
 S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.randomForestSRC)
+S3method(predictLearner,regr.randomUniformForest)
 S3method(predictLearner,regr.rknn)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
@@ -494,6 +498,7 @@ S3method(trainLearner,classif.quaDA)
 S3method(trainLearner,classif.rFerns)
 S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.randomForestSRC)
+S3method(trainLearner,classif.randomUniformForest)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rknn)
 S3method(trainLearner,classif.rpart)
@@ -550,6 +555,7 @@ S3method(trainLearner,regr.penalized.ridge)
 S3method(trainLearner,regr.plsr)
 S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.randomForestSRC)
+S3method(trainLearner,regr.randomUniformForest)
 S3method(trainLearner,regr.rknn)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
